address code review comments, add code snippets and fix up layout on smaller screens

--- a/docs/components/RetrySimulator/retry-simulator.module.css
+++ b/docs/components/RetrySimulator/retry-simulator.module.css
@@ -2,19 +2,26 @@
   border: 0px;
 }
 
-.tr {
+.retryRow {
   border: 0;
   background-color: transparent !important;
+  display: flex;
 }
 
-.td {
+.retryCol {
   border: 0;
   padding-top: 0px !important;
+  vertical-align: top;
+  flex-grow: 1;
+  width: 50%;
 }
 
-.td:first-of-type {
-  padding-left: 0px !important;
-  width: 50%;
+.retryCol:first-of-type {
+  margin-right: 0.25em;
+}
+
+.retryCol:not(:first-of-type) {
+  margin-left: 0.25em;
 }
 
 .scheduleTime {
@@ -72,8 +79,20 @@
 .removeRetry {
   position: absolute;
   right: 1px;
-  top: 1px;
+  top: 0px;
   line-height: 1em;
+  cursor: pointer;
+}
+
+.dropdown {
+  padding: 0.25em 0.5em;
+  border: 1px solid #ddd;
+  background-color: white;
+  margin-bottom: 1em;
+}
+
+.codeBlock {
+  overflow-x: scroll;
 }
 
 .parameter {
@@ -92,10 +111,4 @@
 
 .codeOutputWrap {
   vertical-align: top;
-}
-
-.codeOutput {
-  font-family: monospace;
-  width: 100%;
-  height: 7em;
 }
